...
    <string name="add_box">Add Box</string>
    <string name="update_box">Update Box</string>
    <string name="add_component">Add Component</string>
    <string name="update_component">Update Component</string>
    <string name="search">Search</string>
    <string name="no_components_found">No components found</string>
    <string name="search_components">Search components</string>
    <string name="buy_components">Buy components</string>
    <string name="buy_component">Buy</string>
    <string name="quantity_hint" translatable="false">0</string>
    <string name="direcotry_icon">Directory Icon</string>
    <string name="component_icon">Component icon</string>
    <string name="details">Details</string>
...
